--- a/src/pages/presentation.astro
+++ b/src/pages/presentation.astro
@@ -24,7 +24,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 		<main>
 			<section class="hero-section small-hero">
 				<div class="container hero-container">
-					<span class="badge">A PROPOS</span>
+					<span class="badge">PRÉSENTATION</span>
 					<h1 class="hero-title">
 						Mon <span class="text-gradient">Parcours</span>
 					</h1>
