--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -107,7 +107,12 @@ const isAboutActive =
 				</div>
 			</div>
 
-			<HeaderLink href={base + "/contact"}>Contact</HeaderLink>
+			<HeaderLink
+				href={base + "/contact"}
+				class={pathname.includes("/contact") ? "active" : ""}
+			>
+				Contact
+			</HeaderLink>
 		</div>
 
 		<div class="social-links">
