fix: correct `premiere` logo asset filename by removing accent

--- a/src/pages/competences.astro
+++ b/src/pages/competences.astro
@@ -9,7 +9,7 @@ import { Image } from "astro:assets";
 import psLogo from "../assets/logos/photoshop.png";
 import aiLogo from "../assets/logos/illustrator.png";
 import aeLogo from "../assets/logos/after_effect.png";
-import prLogo from "../assets/logos/première.png"; // Attention accent
+import prLogo from "../assets/logos/premiere.png"; // Attention accent
 import lrLogo from "../assets/logos/lightroom.png";
 import vsLogo from "../assets/logos/visual.png";
 import sunliteLogo from "../assets/logos/sunlite.png";
