Test import css dans index.astro directement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,8 @@ import devImg from "../assets/images/dev.jpg";
 import comImg from "../assets/images/com.jpg";
 import creaImg from "../assets/images/crea.jpg";
 import lightImg from "../assets/images/light.jpg";
+
+import "../styles/global.css";
 ---
 
 <!doctype html>
