--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,6 @@ import devImg from "../assets/images/dev.jpg";
 import comImg from "../assets/images/com.jpg";
 import creaImg from "../assets/images/crea.jpg";
 import lightImg from "../assets/images/light.jpg";
-
-import "../styles/global.css";
 ---
 
 <!doctype html>
@@ -335,5 +333,11 @@ import "../styles/global.css";
 
     .bento-card:hover .card-img {
         transform: scale(1.1);
+    }
+</style>
+
+<style>
+    body {
+        background: red !important;
     }
 </style>
