--- a/src/pages/developpement.astro
+++ b/src/pages/developpement.astro
@@ -16,7 +16,7 @@ const projects = [
 			"Création complète d'un blog WordPress sur le thème du sport et intégration d'un motion design pour un ballon connecté.",
 		image: piThumb,
 		tags: ["WordPress", "Motion Design", "Rédaction"],
-		link: "/portfolio/developpement/wordpress-blog",
+		link: "/portfolio2/developpement/wordpress-blog",
 	},
 	// Copie-colle un bloc {} pour ajouter un nouveau projet
 ];
@@ -109,7 +109,7 @@ const projects = [
 		text-align: center;
 		color: white;
 		/* J'ai mis une image de code pour le fond */
-		background-image: url("/portfolio/images/dev.jpg");
+		background-image: url("/portfolio2/images/dev.jpg");
 		background-size: cover;
 		background-position: center;
 	}
